--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,14 @@
   height: 100%;
   // background-color: #FAFAFA;
 
+  &.light-theme {
+    background-color: #FAFAFA;
+  }
+
+  &.dark-theme {
+    background-color: #a3b3af;
+  }
+
   .top-navbar {
     height: 64px;
     box-shadow: 0px 0px 4px 4px #ccc;
@@ -16,5 +24,16 @@
     //   background-image: url('../assets/images/logo.svg');
     //   background-repeat: no-repeat;
     // }
+  }
+}
+
+.light-theme {
+  .top-navbar {
+    box-shadow: 0px 0px 4px 4px #ccc;
+  }
+}
+.dark-theme {
+  .top-navbar {
+    box-shadow: 0px 0px 4px 4px #0a1916;
   }
 }
