--- a/src/app/components/posts/posts.component.scss
+++ b/src/app/components/posts/posts.component.scss
@@ -1,7 +1,34 @@
-.posts {
+.posts-box {
   width: 75vw;
-  background-color: #F1F1F1;
-  box-shadow: inset 0px 0px 4px 1px #949494;
+  // box-shadow: inset 0px 0px 4px 1px #949494;
   height: auto;
-  max-height: 60vh;
+  max-height: 80vh;
+}
+
+.card-body {
+  height: 130px;
+}
+
+@media screen and (max-width: 768px) {
+  .card-body {
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .card-body {
+    min-height: 280px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .card-body {
+    min-height: 220px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-body {
+    min-height: 190px;
+  }
 }
