--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,17 +1,21 @@
+<!-- <ng-container *ngIf="currentPostId && commentModalIsVisible">
+  <app-post-detail
+    [postId]="currentPostId"
+    [isModalVisible]="commentModalIsVisible"
+  >
+  </app-post-detail>
+</ng-container> -->
+
 <div class="container d-flex justify-content-center">
   <div class="posts-box mt-6 px-3 py-2 box-limited border rounded">
     <div class="row">
       <ng-container *ngFor="let post of postReadyList">
         <div class="col-12 col-md-6">
-          <div class="card mb-4 no-border-bg-dark">
-            <div class="card-header bg-primary-600 bg-primary-dark-800 f-18">
-              <span class="text-light cursor-pointer hover">{{ post.username }}</span>
-            </div>
-            <div class="card-body bg-primary-dark-500 text-light-bg-dark">
-              <h5 class="card-title f-18 border-bottom">{{ post.title }}</h5>
-              <p class="card-text p-2 f-16">{{ post.body }}</p>
-            </div>
-          </div>
+          <app-post-detail
+            [post]="post"
+            [isModalVisible]="currentPostId === post.id"
+          >
+          </app-post-detail>
         </div>
       </ng-container>
     </div>
